next fix for overlap issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3523,6 +3523,26 @@ input, select, textarea {
 		z-index: 2;
 	}
 
+		#header h1, #header p {
+			-moz-transition: opacity 0.5s ease, -moz-transform 0.5s ease;
+			-webkit-transition: opacity 0.5s ease, -webkit-transform 0.5s ease;
+			-ms-transition: opacity 0.5s ease, -ms-transform 0.5s ease;
+			transition: opacity 0.5s ease, transform 0.5s ease;
+			-moz-transform: translateY(2rem);
+			-webkit-transform: translateY(2rem);
+			-ms-transform: translateY(2rem);
+			transform: translateY(2rem);
+			opacity: 0;
+		}
+
+			#intro.hidden + #header h1, #intro.hidden + #header p {
+				-moz-transform: translateY(0);
+				-webkit-transform: translateY(0);
+				-ms-transform: translateY(0);
+				transform: translateY(0);
+				opacity: 1;
+			}
+
 		#header input, #header select, #header textarea {
 			color: #ffffff;
 		}
